# ucl

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Paths.txt  README.md  changelog.txt
doc/: Doxyfile  easteregg.hpp  mainpage.md
include/ucl/: IConfig.hpp  api.hpp  license.hpp  ucl.hpp  version.hpp
src/tests/: main.cpp
src/ucl/: IConfig.cpp  version.cpp
